fix: increase rtl ul right alignement

--- a/themes/hello-friend-ng/assets/scss/_single.scss
+++ b/themes/hello-friend-ng/assets/scss/_single.scss
@@ -8,9 +8,9 @@
     padding: 0;
     ul {
       direction: rtl;
+      margin-right: 40px;
       li {
         direction: rtl;
-        margin-right: 20px;
       }
     }
   }
